--- a/templates/base.html
+++ b/templates/base.html
@@ -124,6 +124,11 @@
                       Pre-Booking List
                     </a>
                   </li>
+                  <li>
+                    <a href="{{ url_for('prebooking_products_list') }}">
+                      Add Products
+                    </a>
+                  </li>
                 </ul>
               </li>
 
